exports[`CheckIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CheckIcon"
  isBadge={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16">
  <path
    d="M11.92,5.189c0.285,0.285,0.285,0.749,0,1.033l-4.932,4.981c-0.285,0.285-0.748,0.285-1.033,0L3.47,8.85 c-0.286-0.287-0.286-0.748,0-1.034l0.287-0.343c0.285-0.286,0.747-0.286,1.033,0l1.747,1.614l4.13-4.127 c0.284-0.285,0.748-0.285,1.033,0L11.92,5.189z" />
</Icon>
`;

exports[`CheckIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CheckIcon"
  isBadge={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16">
  <path
    d="M11.92,5.189c0.285,0.285,0.285,0.749,0,1.033l-4.932,4.981c-0.285,0.285-0.748,0.285-1.033,0L3.47,8.85 c-0.286-0.287-0.286-0.748,0-1.034l0.287-0.343c0.285-0.286,0.747-0.286,1.033,0l1.747,1.614l4.13-4.127 c0.284-0.285,0.748-0.285,1.033,0L11.92,5.189z" />
</Icon>
`;

exports[`CheckIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CheckIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16">
  <path
    d="M11.92,5.189c0.285,0.285,0.285,0.749,0,1.033l-4.932,4.981c-0.285,0.285-0.748,0.285-1.033,0L3.47,8.85 c-0.286-0.287-0.286-0.748,0-1.034l0.287-0.343c0.285-0.286,0.747-0.286,1.033,0l1.747,1.614l4.13-4.127 c0.284-0.285,0.748-0.285,1.033,0L11.92,5.189z" />
</Icon>
`;

exports[`CheckIcon [common] example testing should match snapshot(s) for 2.clickable 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CheckIcon"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16">
  <path
    d="M11.92,5.189c0.285,0.285,0.285,0.749,0,1.033l-4.932,4.981c-0.285,0.285-0.748,0.285-1.033,0L3.47,8.85 c-0.286-0.287-0.286-0.748,0-1.034l0.287-0.343c0.285-0.286,0.747-0.286,1.033,0l1.747,1.614l4.13-4.127 c0.284-0.285,0.748-0.285,1.033,0L11.92,5.189z" />
</Icon>
`;

exports[`CheckIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CheckIcon"
  isBadge={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16">
  <path
    d="M11.92,5.189c0.285,0.285,0.285,0.749,0,1.033l-4.932,4.981c-0.285,0.285-0.748,0.285-1.033,0L3.47,8.85 c-0.286-0.287-0.286-0.748,0-1.034l0.287-0.343c0.285-0.286,0.747-0.286,1.033,0l1.747,1.614l4.13-4.127 c0.284-0.285,0.748-0.285,1.033,0L11.92,5.189z" />
</Icon>
`;

exports[`CheckIcon [common] example testing should match snapshot(s) for 3.disabled 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CheckIcon"
  isBadge={true}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16">
  <path
    d="M11.92,5.189c0.285,0.285,0.285,0.749,0,1.033l-4.932,4.981c-0.285,0.285-0.748,0.285-1.033,0L3.47,8.85 c-0.286-0.287-0.286-0.748,0-1.034l0.287-0.343c0.285-0.286,0.747-0.286,1.033,0l1.747,1.614l4.13-4.127 c0.284-0.285,0.748-0.285,1.033,0L11.92,5.189z" />
</Icon>
`;
